<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/location_24"
            android:title="@string/nav_locations" />
        <item
            android:id="@+id/nav_transport"
            android:icon="@drawable/transport_24"
            android:title="@string/nav_transportation" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news_24"
            android:title="@string/nav_news" />

        <item
            android:id="@+id/nav_wellness"
            android:icon="@drawable/yoga_26"
            android:title="@string/nav_wellness" />
    </group>

    <item android:title="Quick Links">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/about_24"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_current_weather"
                android:icon="@drawable/weather_24"
                android:title="@string/current_weather" />
            <item
                android:id="@+id/currency"
                android:icon="@drawable/currency_24"
                android:title="@string/currency" />
        </menu>
    </item>

</menu>